# JavaObjectStreams

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: doxygen.yml
cmake/: doxygen.cmake
docs/: Doxyfile.in  header.html
include/JavaObject/: EJavaFieldDescriptorType.h  EJavaTypeCode.h  EObjectTypeCode.h  EPrimitiveTypeCode.h  JavaSerializedClassParser.h
include/JavaObject/io/: Serializable.h
include/JavaObject/stream/: ObjectInputStream.h  ObjectOutputStream.h
include/JavaObject/type/: HandleContainer.h  ITypeCodeParser.h  ITypeCodeParserStorageHolder.h  ITypeCodeStorageHolder.h  TypeCodeParser.cpp  TypeCodeParser.h  TypeCodeParserStorage.h
include/JavaObject/type/object/: AnnotationObject.cpp  AnnotationObject.h  ClassDataObject.cpp  ClassDataObject.h  IObject.cpp  IObject.h  NullObject.h  Object.cpp  Object.h  ObjectTypeCodeParser.h  ReferenceObject.cpp  ReferenceObject.h  StringObject.cpp  StringObject.h
include/JavaObject/type/object/descriptor/: ClassDescriptorInfoObject.cpp  ClassDescriptorInfoObject.h  ClassDescriptorObject.cpp  ClassDescriptorObject.h  FieldDescriptorObject.cpp  FieldDescriptorObject.h  NewClassDescriptorObject.cpp  NewClassDescriptorObject.h  PrimitiveDescriptorObject.cpp  PrimitiveDescriptorObject.h
include/JavaObject/type/object/parsers/: ArrayObjectParser.h  ClassDataParser.h  ClassObjectParser.h  EndBlockDataObjectParser.h  ExceptionObjectParser.h  IObjectParser.h  LongBlockDataObjectParser.h  NewClassParser.h  NullObjectParser.h  ObjectParser.h  ReferenceParser.h  ResetObjectParser.h  ShortBlockDataObjectParser.h  StringParser.h
include/JavaObject/type/object/parsers/descriptor/: ClassDescriptorInfoParser.h  ClassDescriptorParser.h  FieldDescriptorParser.h  NewClassDescriptorParser.h  NewProxyClassDescriptorParser.h  PrimitiveDescriptorParser.h  (+1 more)
include/JavaObject/type/object/types/: AnnotationObject.h  ArrayObject.h  BlockDataObject.h  ClassDataObject.h  EndBlockDataObject.h  IObject.h  NullObject.h  Object.h  ReferenceObject.h  ResetObject.h  StringObject.h
include/JavaObject/type/parser/: ClassDataParser.cpp  ClassDataParser.h  IObjectParser.cpp  IObjectParser.h  ObjectParser.cpp  ObjectParser.h  ReferenceParser.cpp  ReferenceParser.h  StringParser.cpp  StringParser.h
include/JavaObject/type/parser/descriptor/: ClassDescriptorInfoParser.cpp  ClassDescriptorInfoParser.h  ClassDescriptorParser.cpp  ClassDescriptorParser.h  FieldDescriptorParser.cpp  FieldDescriptorParser.h  NewClassDescriptorParser.cpp  NewClassDescriptorParser.h  PrimitiveDescriptorParser.cpp  PrimitiveDescriptorParser.h
include/JavaObject/type/primitive/: PrimitiveTypeCodeParser.h
include/JavaObject/type/primitive/parsers/: IPrimitiveObjectParser.h  PrimitiveArrayObjectParser.h  PrimitiveBooleanObjectParser.h  PrimitiveByteObjectParser.h  PrimitiveCharObjectParser.h  PrimitiveDoubleObjectParser.h  PrimitiveFloatObjectParser.h  PrimitiveIntegerObjectParser.h  PrimitiveJavaObjectParser.h  PrimitiveLongObjectParser.h  PrimitiveShortObjectParser.h
include/JavaObject/type/primitive/types/: IPrimitiveObject.h  PrimitiveArrayObject.h  PrimitiveBooleanObject.h  PrimitiveByteObject.h  PrimitiveCharObject.h  PrimitiveDoubleObject.h  PrimitiveFloatObject.h  PrimitiveIntegerObject.h  PrimitiveJavaObject.h  PrimitiveLongObject.h  PrimitiveShortObject.h
include/JavaObject/util/: SmartPointerCast.cpp  SmartPointerCast.h
src/: JavaSerializedClassParser.cpp
src/io/: Serializable.cpp
src/stream/: ObjectInputStream.cpp  ObjectOutputStream.cpp
src/type/: HandleContainer.cpp  ITypeCodeParser.cpp  ITypeCodeParserStorageHolder.cpp  ITypeCodeStorageHolder.cpp  TypeCodeParserStorage.cpp
src/type/object/: ObjectTypeCodeParser.cpp
src/type/object/parsers/: ArrayObjectParser.cpp  ClassDataParser.cpp  ClassObjectParser.cpp  EndBlockDataObjectParser.cpp  ExceptionObjectParser.cpp  IObjectParser.cpp  LongBlockDataObjectParser.cpp  NewClassParser.cpp  NullObjectParser.cpp  ObjectParser.cpp  ReferenceParser.cpp  ResetObjectParser.cpp  ShortBlockDataObjectParser.cpp  StringParser.cpp
src/type/object/parsers/descriptor/: ClassDescriptorInfoParser.cpp  ClassDescriptorParser.cpp  FieldDescriptorParser.cpp  NewClassDescriptorParser.cpp  NewProxyClassDescriptorParser.cpp  PrimitiveDescriptorParser.cpp  ProxyClassDescriptorInfoParser.cpp
src/type/object/types/: AnnotationObject.cpp  ArrayObject.cpp  BlockDataObject.cpp  ClassDataObject.cpp  EndBlockDataObject.cpp  IObject.cpp  NullObject.cpp  Object.cpp  ReferenceObject.cpp  ResetObject.cpp  StringObject.cpp
src/type/object/types/descriptor/: ClassDescriptorInfoObject.cpp  ClassDescriptorObject.cpp  FieldDescriptorObject.cpp  NewClassDescriptorObject.cpp  PrimitiveDescriptorObject.cpp  ProxyClassDescriptorInfoObject.cpp  ProxyClassDescriptorObject.cpp
src/type/primitive/: PrimitiveTypeCodeParser.cpp
src/type/primitive/parsers/: IPrimitiveObjectParser.cpp  PrimitiveArrayObjectParser.cpp  PrimitiveBooleanObjectParser.cpp  PrimitiveByteObjectParser.cpp  PrimitiveCharObjectParser.cpp  PrimitiveDoubleObjectParser.cpp  PrimitiveFloatObjectParser.cpp  PrimitiveIntegerObjectParser.cpp  PrimitiveJavaObjectParser.cpp  PrimitiveLongObjectParser.cpp  PrimitiveShortObjectParser.cpp
src/type/primitive/types/: IPrimitiveObject.cpp  PrimitiveArrayObject.cpp  PrimitiveBooleanObject.cpp  PrimitiveByteObject.cpp  PrimitiveCharObject.cpp  PrimitiveDoubleObject.cpp  PrimitiveFloatObject.cpp  PrimitiveIntegerObject.cpp  PrimitiveJavaObject.cpp  PrimitiveLongObject.cpp  PrimitiveShortObject.cpp
src/util/: SmartPointerCast.cpp
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt
tests/cpp/src/: JavaObjectStreamsTests.cpp
tests/java/: CMakeLists.txt  build.gradle.kts  settings.gradle.kts
tests/java/gradle/wrapper/: gradle-wrapper.properties
tests/java/modules/Common/: build.gradle.kts
tests/java/modules/Input/: build.gradle.kts
tests/java/modules/Output/: build.gradle.kts
tests/src/: JavaObjectStreamsTests.cpp
util/JavaObjectDump/: CMakeLists.txt
util/JavaObjectDump/src/: main.cpp
(+54 files in other folders)
